--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	<p><em>What I do for a living:</em><br>
 		I've been building apps since 2014. Initially, I got paid when I won prize money from competitions.<br>
 		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
-		where I spent a year immersed in code, and hosted this consulting event every other Saturday.<br>
+		where I spent a year immersed in code, and hosted this consulting event to over 100 developers.<br>
 		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
 	</p>
  
@@ -177,8 +177,12 @@ Please send it to the email above or even better: tell me in person :)</p>
 <t9>Resources</t9>
 <p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 	
-</div>
 
+<t9>Published Apps</t9>
+<p><a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">Visit my Google Play Developer page.</a></p>
+	
+</div>
+	
 <footer>
 	<hr>
 	<em>The best way to predict your future is to create it with like-minded individuals.</em>
