--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	</ul>
 </div>
 	
-<t9>Published Apps</t9>
+<t9>Published Android Apps</t9>
 <p><a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">Visit my Google Play Developer page.</a></p>
 	
 
