--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 <t9>Published Android Apps</t9>
 	
-<p><a href='https://play.google.com/store/apps/dev?id=5703169787103335489&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a><br><a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">Visit my Google Play Developer page.</a></p>
+<p><a href='https://play.google.com/store/apps/dev?id=5703169787103335489&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></p>
 	
 
 <t5>Meet me</t5>
