--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 <t9>My Android Developer Page</t9>
 	
-<p><a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
-	<img alt="Get it on Google Play" src="google-play-badge.png" style="width:130px;height:50px;">
-</a></p>
+<p>
+	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
+	<img alt="Get it on Google Play" 
+	     src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" 
+	     style="width:130px;height:50px;"></a>
+</p>
 	
 
 <t5>Meet me</t5>
