--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@ Please send it to the email above or even better: tell me in person :)</p>
 <t9>Resources</t9>
 <p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 	
+<t9>Resume</t9>
+<p><a href="RodMesquita_Resume.pdf" target="_blank">link to PDF</a></p>
+	
 </div>
 	
 <footer>
