--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	</ul>
 </div>
 	
-<t9>My Android App (Audios)</t9>
+<t9>Android App (Audios)</t9>
 	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
@@ -133,7 +133,10 @@ For professionals, learning how to build mobile apps will increase their career 
 	     style="width:230px;height:90px;"></a>
 </p>
 	
+<t5>Podcast</t5>
+<p><a href="https://soundcloud.com/insightsonlearning" target="_blank">Link to Soundcloud</a></p>
 
+	
 <t5>Meet me</t5>
 <p>To schedule your session, please email me your first and last name, and reason you want to meet.</p>
 	
