--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@ table{
 </div>
 <div class="container_bottom">
 
+<t9>Portfolio - Android App (vopio)</t9>
+	
+<p>
+	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
+	<img alt="Get it on Google Play" 
+	     src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" 
+	     style="width:230px;height:90px;"></a>
+</p>
+	
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
 For entrepreneurs, hiring a team of developers to build their app can be too expensive, so I can build your MVP.<br>
@@ -124,25 +133,16 @@ For professionals, learning how to build mobile apps will increase their career 
 	</ul>
 </div>
 	
-<t9>Android App (vopio)</t9>
-	
-<p>
-	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
-	<img alt="Get it on Google Play" 
-	     src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" 
-	     style="width:230px;height:90px;"></a>
-</p>
-	
 <t5>Podcast</t5>
 <p><a href="https://soundcloud.com/insightsonlearning" target="_blank">Link to SoundCloud</a></p>
 
 	
 <t5>Meet me</t5>
-<p>To schedule your session, please email me your first and last name, and reason you want to meet.</p>
+<p>To schedule your session, please email me your nickname or first name, and reason you want to meet.</p>
 	
 <t6>Contact me</t6>
 <p>
-Name: Rod M.<br>
+Name: Rod Mesquita<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
