--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ I can help you set it up.</p>
 	
 		<p><image src="spartahack2018.jpg" style="width:560px;height:315px;" alt="SpartaHack 2018">
 		<br><a href="https://www.spartahack.com/" target="_blank">SpartaHack</a> 2018<br>
-		From left to right: Rod M., Arpan Rughani, 
+		From left to right: Rod Mesquita, Arpan Rughani, 
 		<a href="https://www.linkedin.com/in/smriti-wadhwa/" target="_blank">Smriti Wadhwa</a>, 
 		<a href="https://www.linkedin.com/in/aaron-crutchfield/" target="_blank">Aaron Crutchfield</a><br>
 		In this event, I mentored Aaron and Smriti. They built an Android app leveraging Arpan's API <br>
@@ -179,7 +179,7 @@ I can help you set it up.</p>
 		
 		<p><image src="ltu_2014.jpg" style="width:560px;height:380px;" alt="LTU Collaboratory 2014"><br>
 		<a href="http://www.ltucollaboratory.com/" target="_blank">LTU Collaboratory</a> 2014<br>
-		From left to right: Rod M., Jorge Chagas, Francis "Tex" Criqui<br>
+		From left to right: Rod Mesquita, Jorge Chagas, Francis "Tex" Criqui<br>
 		In this event, Jorge and I won the "Best Team Award" for building 
 		<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">vopio</a>, 
 			a language learning app.<br>
