--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Please send it to the email above or even better: tell me in person :)</p>
 	
 <footer>
 	<hr>
-	<em>The best way to predict your future is to create it with like-minded individuals.</em>
+	<em>The best way to predict your future is to create it.</em>
 </footer>
 </body>
 <html>
