--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ For professionals, learning how to build mobile apps will increase their career 
 	<p><em>What I stand for:</em><br>
 		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
 	<p><em>What I do for a living:</em><br>
-		I've been building apps since 2014. Initially, I got paid when I won prize money from competitions.<br>
-		Eventually I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
-		where I spent a year immersed in code, and hosted this consulting event to over 100 developers.<br>
+		I've been building apps since 2014. Initially, I got paid by winning prize money from competitions.<br>
+		Eventually, I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
+		where I spent a year immersed in code, and hosted consulting events to over a hundred developers.<br>
 		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
 	</p>
  
@@ -135,10 +135,6 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 <t5>Podcast</t5>
 <p><a href="https://soundcloud.com/insightsonlearning" target="_blank">Link to SoundCloud</a></p>
-
-	
-<t5>Meet me</t5>
-<p>To schedule your session, please email me your nickname or first name, and reason you want to meet.</p>
 	
 <t6>Contact me</t6>
 <p>
@@ -147,9 +143,9 @@ Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
 <t7>What to bring</t7>
-<p>You can bring your Mac or Windows laptop if you want to get started or if you need help with building your app,<br>
+<p>You can bring your Mac or Windows laptop if you want to get started coding or if you need help with building your app,<br>
 but if you just want to learn more, bring something to write on (if you want to take notes).<br>
-To get the most from your session, please have 
+If you are just getting started, please have 
 <a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
 I can help you set it up.</p>
 
