--- a/index.html
+++ b/index.html
@@ -123,18 +123,15 @@ For professionals, learning how to build mobile apps will increase their career 
 	</p>
  
 <t3>My mission</t3> 
-<p>To help my community get started building mobile apps.</p>
+<p>To help my community get started building mobile apps and help companies build better products.</p>
 
 <t4>My focus<br/></t4>
 <div class="focus">
 	<ul>
-		<li>Share my professional experience building mobile apps with Java and Kotlin.</li>
+		<li>Share my professional experience building mobile apps with Java, Kotlin and C#.</li>
 		<li>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
 	</ul>
 </div>
-	
-<t5>Podcast</t5>
-<p><a href="https://soundcloud.com/insightsonlearning" target="_blank">Link to SoundCloud</a></p>
 	
 <t6>Contact me</t6>
 <p>
@@ -142,7 +139,7 @@ Name: Rod Mesquita<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	
-<t7>What to bring</t7>
+<t7>What to bring to my consulting workshop</t7>
 <p>You can bring your Mac or Windows laptop if you want to get started coding or if you need help with building your app,<br>
 but if you just want to learn more, bring something to write on (if you want to take notes).<br>
 If you are just getting started, please have 
