--- a/index.html
+++ b/index.html
@@ -98,13 +98,17 @@ table{
 </div>
 <div class="container_bottom">
 
+<t9>Disclaimer</t9>
+<p><em>I may not know how to design a great website, but I can definitely design an app.</em></p>
+	
 <t9>Portfolio - Android App (vopio)</t9>
 	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
 	<img alt="Get it on Google Play" 
 	     src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png" 
-	     style="width:230px;height:90px;"></a>
+	     style="width:230px;height:90px;"></a><br>
+	
 </p>
 	
 <br><t1>Who is this for?</t1>
@@ -119,7 +123,7 @@ For professionals, learning how to build mobile apps will increase their career 
 		I've been building apps since 2014. Initially, I got paid by winning prize money from competitions.<br>
 		Eventually, I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
 		where I spent a year immersed in code, and hosted consulting events to over a hundred developers.<br>
-		As of today, I am back to school and pursuing a B.S. in Computer Science from Lawrence Tech University.
+		As of today, I am back to school pursuing a B.S. in Computer Science from Lawrence Tech University.
 	</p>
  
 <t3>My mission</t3> 
