--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@ table{
 	</table>
 </div>
 <div class="container_bottom">
-
-<t9>Disclaimer</t9>
-<p><em>I may not know how to design a great website, but I can definitely design an app.</em></p>
+	
+<p><em>Disclaimer: I may not know how to design a great website, but I can definitely design an app.</em></p>
 	
 <t9>Portfolio - Android App (vopio)</t9>
 	
@@ -110,7 +109,7 @@ table{
 	     style="width:230px;height:90px;"></a><br>
 	
 </p>
-	
+		
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
 For entrepreneurs, hiring a team of developers to build their app can be too expensive, so I can build your MVP.<br>
