--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@ table{
 	</table>
 </div>
 <div class="container_bottom">
+
+<t9>Disclaimer</t9>
 	
-<p><em>Disclaimer: I may not know how to design a great website, but I can definitely design an app.</em></p>
+<p><em>I may not know how to design a great website, but I can definitely design an app.</em></p>
 	
 <t9>Portfolio - Android App (vopio)</t9>
 	
