--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ table{
 
 <t9>Disclaimer</t9>
 	
-<p><em>I may not know how to design a great website, but I can definitely design an app.</em></p>
+<p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
 	
 <t9>Portfolio - Android App (vopio)</t9>
 	
