--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ table{
 	
 <p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
 	
-<t9>Portfolio - Android App (vopio)</t9>
-	
+<t9>Google Play Developer Page</t9>
+<p>Visit to see my published Android apps.</p>	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
 	<img alt="Get it on Google Play" 
