--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ table{
 <p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
 	
 <t9>Google Play Developer Page</t9>
-<p>Visit to see my published Android apps.</p>	
+<p>Visit to see my Android apps (vopio and more)</p>	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
 	<img alt="Get it on Google Play" 
