--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@ table{
 </div>
 <div class="container_bottom">
 
+	<t9>Now on Kickstarter!</t9>
+	<p>Link to our crowdfunding campaign page: 
+		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a><br>
+		<a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a>
+	</p>
+	
 <t9>Disclaimer</t9>
 	
 <p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
