--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ table{
 </div>
 <div class="container_bottom">
 
-	<t9>Now on Kickstarter!</t9>
+	<t9 text-align:center; >Now on Kickstarter!</t9>
 	<p>Link to our crowdfunding campaign page: 
 		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a><br>
-		<a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a>
+		<!-- <a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a> -->
 	</p>
 	
 <t9>Disclaimer</t9>
