--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@ table{
 </div>
 <div class="container_bottom">
 
-	<t9 text-align:center; >Now on Kickstarter!</t9>
+	<t9>Now on Kickstarter!</t9>
 	<p>Link to our crowdfunding campaign page: 
 		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a><br>
 		<!-- <a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a> -->
 	</p>
-	
+	<!--
 <t9>Disclaimer</t9>
 	
 <p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
@@ -198,6 +198,8 @@ Please send it to the email above or even better: tell me in person :)</p>
 	
 <t9>Resume</t9>
 <p><a href="RodMesquita_Resume.pdf" target="_blank">link to PDF</a></p>
+
+-->
 	
 </div>
 	
