--- a/index.html
+++ b/index.html
@@ -144,11 +144,15 @@ For professionals, learning how to build mobile apps will increase their career 
 	</ul>
 </div>
 	
-<t6>Contact me</t6>
+-->
+	
+<t6>Contact info</t6>
 <p>
 Name: Rod Mesquita<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
+	
+<!--
 	
 <t7>What to bring to my consulting workshop</t7>
 <p>You can bring your Mac or Windows laptop if you want to get started coding or if you need help with building your app,<br>
