--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ table{
 
 	<t9>Now on Kickstarter!</t9>
 	<p>Link to our crowdfunding campaign page: 
-		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a><br>
+		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a> - The Shepherd Lock Team
 		<!-- <a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a> -->
 	</p>
 	<!--
