--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Mobile App Development Consulting<h1/>
+<h1>Expert Mobile App Development Consulting<h1/>
 </div>
 <div class="banner">
 	<table>
@@ -89,27 +89,16 @@ table{
 			<th style="text-align:left;"><h2><em>Fostering Mobile Technology,</em></h2></th>
 		</tr>
 		<tr>
-			<th style="text-align:center;"><h2><em>Entrepreneurship,</em></h2></th>
+			<th style="text-align:center;"><h2><em>and Entrepreneurship,</em></h2></th>
 		</tr>
 		<tr>
-			<th style="text-align:right;"><h2><em>and Career Development.</em></h2></th>
+			<th style="text-align:right;"><h2><em>with iOS & Android app development.</em></h2></th>
 		</tr>
 	</table>
 </div>
 <div class="container_bottom">
-
-	<t9>Now on Kickstarter!</t9>
-	<p>Link to our crowdfunding campaign page: 
-		<a href="https://ff.go2.fund/passivebolt" target="_blank">(click here)</a> - The Shepherd Lock Team
-		<!-- <a href="https://www.kickstarter.com/projects/shepherdlock/shepherd-lock-keyless-entry-technology-for-your-home" target="_blank">(alternative link)</a> -->
-	</p>
-	<!--
-<t9>Disclaimer</t9>
 	
-<p><em>I may not know how to design a great website, but I can definitely design mobile apps.</em></p>
-	
-<t9>Google Play Developer Page</t9>
-<p>Visit to see my Android apps (vopio and more)</p>	
+<t9>Android - Google Play Developer Page</t9>	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
 	<img alt="Get it on Google Play" 
@@ -117,7 +106,10 @@ table{
 	     style="width:230px;height:90px;"></a><br>
 	
 </p>
-		
+	
+<t9>Apple - iOS App</t9>
+	<p>My latest iOS app is currently under development. To learn more, visit <a href="https://shepherdlock.com" target="_blank">my client's page</a>.</p>
+<!--
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
 For entrepreneurs, hiring a team of developers to build their app can be too expensive, so I can build your MVP.<br>
