--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Expert Mobile App Development Consulting<h1/>
+<h1>Expert Mobile App Development<h1/>
 </div>
 <div class="banner">
 	<table>
