--- a/index.html
+++ b/index.html
@@ -138,13 +138,16 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 -->
 	
-<t6>Contact info</t6>
+	<t6>About Me</t6>
+	<p>I develop mobile apps for both iOS and Android. I use Swift for iOS and Java/Kotlin for Android.
+		I do not have a favorite platform, but I <em>definitely</em> prefer their native IDEs (Xcode/Android Studio) when compared with Xamarin/Visual Studio.</p>
+
+	<t6>Contact info</t6>
 <p>
 Name: Rod Mesquita<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
-	
-<!--
+	<!--
 	
 <t7>What to bring to my consulting workshop</t7>
 <p>You can bring your Mac or Windows laptop if you want to get started coding or if you need help with building your app,<br>
