--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ For professionals, learning how to build mobile apps will increase their career 
 -->
 	
 	<t6>About Me</t6>
-	<p>I develop mobile apps for both iOS and Android. I use Swift for iOS and Java/Kotlin for Android.
+	<p>I develop mobile apps for both iOS and Android. I code with Swift, Java and Kotlin.
 		I do not have a favorite platform, but I <em>definitely</em> prefer their native IDEs (Xcode/Android Studio) when compared with Xamarin/Visual Studio.</p>
 
 	<t6>Contact info</t6>
