--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ table{
 </head> 
 <body>
 <div class="container_top">
-<h1>Expert Mobile App Development<h1/>
+<h1>Mobile App Development est. 2014<h1/>
 </div>
 <div class="banner">
 	<table>
@@ -140,7 +140,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 	<t6>About Me</t6>
 	<p>I develop mobile apps for both iOS and Android. I code with Swift, Java and Kotlin.
-		I do not have a favorite platform, but I <em>definitely</em> prefer their native IDEs (Xcode/Android Studio) when compared with Xamarin/Visual Studio.</p>
+		I do not have a favorite platform, but I <em>definitely</em> prefer their native IDEs (Xcode/Android Studio) as opposed to Xamarin/Visual Studio.</p>
 
 	<t6>Contact info</t6>
 <p>
