--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ table{
 			<th style="text-align:center;"><h2><em>and Entrepreneurship,</em></h2></th>
 		</tr>
 		<tr>
-			<th style="text-align:right;"><h2><em>with iOS & Android app development.</em></h2></th>
+			<th style="text-align:right;"><h2><em>with iOS & Android Apps.</em></h2></th>
 		</tr>
 	</table>
 </div>
