--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ table{
 	
 </p>
 	
-<t9>Apple - iOS App</t9>
+<t9>iOS</t9>
 	<p>My latest iOS app is currently under development. To learn more, visit <a href="https://shepherdlock.com" target="_blank">my client's page</a>.</p>
 <!--
 <br><t1>Who is this for?</t1>
