--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@ For professionals, learning how to build mobile apps will increase their career 
 	
 	<t6>About Me</t6>
 	<p>I develop mobile apps for both iOS and Android. I code with Swift, Java and Kotlin.
-		I do not have a favorite platform, but I <em>definitely</em> prefer their native IDEs (Xcode/Android Studio) as opposed to Xamarin/Visual Studio.</p>
+		I do not have a favorite platform, 
+		but I <em>definitely</em> choose their native IDEs (Xcode/Android Studio) over any others.</p>
 
 	<t6>Contact info</t6>
 <p>
