--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ table{
 </p>
 	
 <t9>iOS</t9>
-	<p>My latest iOS app is currently under development. To learn more, visit <a href="https://shepherdlock.com" target="_blank">my client's page</a>.</p>
+	<p>My latest iOS app is currently under development as part of my graduation project. Demo available in person.</p>
 <!--
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
@@ -139,9 +139,9 @@ For professionals, learning how to build mobile apps will increase their career 
 -->
 	
 	<t6>About Me</t6>
-	<p>I develop mobile apps for both iOS and Android. I code with Swift, Java and Kotlin.
-		I do not have a favorite platform, 
-		but I <em>definitely</em> choose their native IDEs (Xcode/Android Studio) over any others.</p>
+	<p>Startup founder turned mobile app developer.</p>
+	<p>My professional goal is to make college lectures truly accessible with carefully designed mobile apps for 
+		both iOS and Android</p>
 
 	<t6>Contact info</t6>
 <p>
