--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ table{
 </div>
 <div class="container_bottom">
 	
-<t9>Android - Google Play Developer Page</t9>	
+<t9>Published Android apps</t9>	
 <p>
 	<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">
 	<img alt="Get it on Google Play" 
@@ -107,8 +107,9 @@ table{
 	
 </p>
 	
-<t9>iOS</t9>
-	<p>My latest iOS app is currently under development as part of my graduation project. Demo available in person.</p>
+<t9>Ongoing iOS app</t9>
+	<p>My latest iOS app is currently under development as part of my graduation project. 
+		It is available to download from the <a href="https://developer.apple.com/testflight/" target="_blank">TestFlight app</a>.</p>
 <!--
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
