--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ For professionals, learning how to build mobile apps will increase their career 
 	<t6>About Me</t6>
 	<p>Startup founder turned mobile app developer.</p>
 	<p>My professional goal is to make college lectures truly accessible with carefully designed mobile apps for 
-		both iOS and Android</p>
+		iPhone and Android</p>
 
 	<t6>Contact info</t6>
 <p>
