--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ table{
 	
 <t9>Ongoing iOS app</t9>
 	<p>My latest iOS app is currently under development as part of my graduation project. 
-		It is available to download from the <a href="https://developer.apple.com/testflight/" target="_blank">TestFlight app</a>.</p>
+		It is available to download from the <a href="https://apps.apple.com/us/app/testflight/id899247664" target="_blank">TestFlight platform</a>.</p>
 <!--
 <br><t1>Who is this for?</t1>
 <p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
