--- a/index.html
+++ b/index.html
@@ -110,39 +110,20 @@ table{
 <t9>Ongoing iOS app</t9>
 	<p>My latest iOS app is currently under development as part of my graduation project. 
 		It is available to download from the <a href="https://apps.apple.com/us/app/testflight/id899247664" target="_blank">TestFlight platform</a>.</p>
-<!--
-<br><t1>Who is this for?</t1>
-<p>Non-technical entrepreneurs and professionals interested in learning more about mobile app development.<br>
-For entrepreneurs, hiring a team of developers to build their app can be too expensive, so I can build your MVP.<br>
-For professionals, learning how to build mobile apps will increase their career options.</p>
+
 
 <t2>About me<t/2>
-	<p><em>What I stand for:</em><br>
-		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
-	<p><em>What I do for a living:</em><br>
-		I've been building apps since 2014. Initially, I got paid by winning prize money from competitions.<br>
-		Eventually, I landed a job as an Android Software Engineer at ASI, a small consultancy in Ann Arbor, MI,<br>
-		where I spent a year immersed in code, and hosted consulting events to over a hundred developers.<br>
-		As of today, I am back to school pursuing a B.S. in Computer Science from Lawrence Tech University.
-	</p>
- 
-<t3>My mission</t3> 
-<p>To help my community get started building mobile apps and help companies build better products.</p>
-
-<t4>My focus<br/></t4>
-<div class="focus">
-	<ul>
-		<li>Share my professional experience building mobile apps with Java, Kotlin and C#.</li>
-		<li>Show non-technical entrepreneurs how to get started in a highly technological market.</li>
-	</ul>
-</div>
-	
--->
-	
-	<t6>About Me</t6>
 	<p>Startup founder turned mobile app developer.</p>
 	<p>My professional goal is to make college lectures truly accessible with carefully designed mobile apps for 
 		iPhone and Android</p>
+	<p></p>
+	<p><em>What I stand for:</em><br>
+		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
+	<p><em>What I do for a living:</em><br>
+		I've been building mobile apps since 2014. Initially, I got paid by winning prize money from competitions.<br>
+		Eventually, I landed a job as an Android Software Engineer, followed by another position as an iOS Developer.<br>
+		As of today, I am back to school finishing my B.S. in Computer Science from Lawrence Tech University.
+	</p>
 
 	<t6>Contact info</t6>
 <p>
@@ -150,16 +131,6 @@ Name: Rod Mesquita<br>
 Email: <a href="mailto:rmesquita@ltu.edu">rmesquita@ltu.edu</a><br>
 Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blank">LinkedIn</a><br/></p>
 	<!--
-	
-<t7>What to bring to my consulting workshop</t7>
-<p>You can bring your Mac or Windows laptop if you want to get started coding or if you need help with building your app,<br>
-but if you just want to learn more, bring something to write on (if you want to take notes).<br>
-If you are just getting started, please have 
-<a href="https://developer.android.com/studio/" target="_blank">Android Studio</a> downloaded in your computer.<br>
-I can help you set it up.</p>
-
-<t9>Location</t9>
-<p>Ann Arbor & Southfield area (specific location will vary depending on demand)</p>
 	
 <t9>Previous events</t9>
 	
