--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ table{
 </p>
 	
 <t9>Ongoing iOS app</t9>
-	<p>My latest iOS app is currently under development as part of my graduation project. 
+	<p>My latest iOS app is currently under development as part of my startup project. 
 		It is available to download from the <a href="https://apps.apple.com/us/app/testflight/id899247664" target="_blank">TestFlight platform</a>.</p>
 
 
@@ -120,9 +120,9 @@ table{
 	<p><em>What I stand for:</em><br>
 		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
 	<p><em>What I do for a living:</em><br>
-		I've been building mobile apps since 2014. Initially, I got paid by winning prize money from competitions.<br>
+		I've been building mobile apps since 2014. Initially, I got lucky by winning prize money from competitions.<br>
 		Eventually, I landed a job as an Android Software Engineer, followed by another position as an iOS Developer.<br>
-		As of today, I am back to school finishing my B.S. in Computer Science from Lawrence Tech University.
+		As of today, I work as a software architect building solutions with iOS and Android apps.
 	</p>
 
 	<t6>Contact info</t6>
@@ -160,17 +160,10 @@ Social Network: <a href="https://www.linkedin.com/in/rodmesquita/" target="_blan
 		<a href="https://play.google.com/store/apps/dev?id=5703169787103335489" target="_blank">vopio</a>, 
 			a language learning app.<br>
 		</p>
-		
-<t9>Feedback</t9>
-<p>I always welcome constructive feedback.<br>
-Please send it to the email above or even better: tell me in person :)</p>
 
 <t9>Resources</t9>
 <p><a href="https://github.com/rmesquit/android_resources" target="_blank">Android-related resources</a></p>
 	
-<t9>Resume</t9>
-<p><a href="RodMesquita_Resume.pdf" target="_blank">link to PDF</a></p>
-
 -->
 	
 </div>
