--- a/index.html
+++ b/index.html
@@ -113,12 +113,11 @@ table{
 
 
 <t2>About me<t/2>
+	<p><em>TLDR:</em><br>
 	<p>Startup founder turned mobile app developer.</p>
 	<p>My professional goal is to make college lectures truly accessible with carefully designed mobile apps for 
-		iPhone and Android</p>
+		iOS and Android.</p>
 	<p></p>
-	<p><em>What I stand for:</em><br>
-		I believe that learning about the latest technologies can help non-technical leaders achieve their professional dreams.</p>
 	<p><em>What I do for a living:</em><br>
 		I've been building mobile apps since 2014. Initially, I got lucky by winning prize money from competitions.<br>
 		Eventually, I landed a job as an Android Software Engineer, followed by another position as an iOS Developer.<br>
